<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rupp.senghort.rupphr.activity.ChangePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:backgroundTint="#FFFFFF"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppThemeBack"
            app:popupTheme="@style/AppThemeBack"/>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="#EEEEEE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/changePasswordLayout"
            android:padding="40dp"
            android:layout_marginTop="50dp"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/logo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:padding="15dp">

                <ImageView
                    android:paddingTop="20dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/rupp_logo" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtCurrentPassword"
                android:drawableLeft="@mipmap/ic_key"
                android:hint="@string/current_password"
                android:layout_marginTop="30dp"
                android:textColor="#000"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtNewPassword"
                android:drawableLeft="@mipmap/ic_key"
                android:hint="@string/new_password"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtReTypeNewPassword"
                android:drawableLeft="@mipmap/ic_key"
                android:hint="@string/re_type_new_password"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:paddingLeft="0dp"
                android:drawablePadding="5dp"
                android:textColorHint="#999"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/save_changes"
                android:id="@+id/btnChangePassword"
                android:textColor="#FFF"
                android:background="@drawable/selector_button"
                android:layout_gravity="center_horizontal"
                android:onClick="saveChanges"/>

        </LinearLayout>

        <com.rey.material.widget.ProgressView
            android:id="@+id/progressView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge"

            app:pv_circular="true"
            app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
            app:pv_progressMode="indeterminate"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"/>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
